// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api-parser request-full-model: api items 1`] = `
Array [
  Object {
    "active": true,
    "description": "",
    "items": Array [
      Object {
        "active": true,
        "description": "",
        "methods": Array [
          "GET",
        ],
        "name": "me",
        "path": "/api/user/me",
        "request": Object {
          "headers": Object {},
          "model": "CurrentUserInfoRequestModel",
          "schemaPath": "<PROJECT_DIR>/test/cases/schemas/user/current-user-info-request-model.json",
        },
        "response": Object {
          "headers": Object {
            "Authorize": "<token>",
            "Content-Type": "application/json; UTF-8",
          },
          "model": "CurrentUserInfoResponseModel",
          "schemaPath": "<PROJECT_DIR>/test/cases/schemas/user/current-user-info-response-model.json",
        },
        "title": "获取当前用户信息",
      },
      Object {
        "active": true,
        "description": "",
        "methods": Array [
          "GET",
        ],
        "name": "UserInfo",
        "path": "/api/user/:id",
        "request": Object {
          "headers": Object {},
        },
        "response": Object {
          "headers": Object {
            "Authorize": "<token>",
            "Content-Type": "application/json; UTF-8",
          },
          "model": "UserInfoResponseVo",
          "schemaPath": "<PROJECT_DIR>/test/cases/schemas/user/user-info-response-vo.json",
        },
        "title": "获取指定用户信息",
      },
    ],
    "methods": Array [
      "GET",
    ],
    "name": "user",
    "namePath": "user",
    "prefixPath": "/api/user",
    "request": Object {
      "headers": Object {},
      "modelNamePrefix": "",
      "modelNameSuffix": "",
    },
    "response": Object {
      "headers": Object {
        "Authorize": "<token>",
        "Content-Type": "application/json; UTF-8",
      },
      "modelNamePrefix": "",
      "modelNameSuffix": "",
    },
    "subGroups": Array [],
    "title": "user",
  },
]
`;

exports[`api-parser simple: api items 1`] = `
Array [
  Object {
    "active": true,
    "description": "",
    "items": Array [
      Object {
        "active": true,
        "description": "",
        "methods": Array [
          "POST",
        ],
        "name": "login",
        "path": "/api/user/login",
        "request": Object {
          "headers": Object {},
        },
        "response": Object {
          "headers": Object {
            "Content-Type": "application/json; UTF-8",
          },
          "model": "UserVo",
          "schemaPath": "<PROJECT_DIR>/test/cases/schemas/user/user-vo.json",
        },
        "title": "登录",
      },
      Object {
        "active": true,
        "description": "",
        "methods": Array [
          "POST",
        ],
        "name": "logout",
        "path": "/api/user/logout",
        "request": Object {
          "headers": Object {},
        },
        "response": Object {
          "headers": Object {
            "Content-Type": "application/json; UTF-8",
          },
          "model": "EmptyVo",
          "schemaPath": "<PROJECT_DIR>/test/cases/schemas/user/empty-vo.json",
        },
        "title": "退出登录",
      },
    ],
    "methods": Array [
      "GET",
    ],
    "name": "user",
    "namePath": "user",
    "prefixPath": "/api/user",
    "request": Object {
      "headers": Object {},
      "modelNamePrefix": "",
      "modelNameSuffix": "",
    },
    "response": Object {
      "headers": Object {
        "Content-Type": "application/json; UTF-8",
      },
      "modelNamePrefix": "",
      "modelNameSuffix": "",
    },
    "subGroups": Array [
      Object {
        "active": true,
        "description": "",
        "items": Array [
          Object {
            "active": true,
            "description": "",
            "methods": Array [
              "GET",
            ],
            "name": "me",
            "path": "/api/user/me",
            "request": Object {
              "headers": Object {},
              "model": "CurrentUserInfoRequestModel",
              "schemaPath": "<PROJECT_DIR>/test/cases/schemas/user-info/current-user-info-request-model.json",
            },
            "response": Object {
              "headers": Object {
                "Authorize": "<token>",
                "Content-Type": "application/json; UTF-8",
              },
              "model": "CurrentUserInfoResponseModel",
              "schemaPath": "<PROJECT_DIR>/test/cases/schemas/user-info/current-user-info-response-model.json",
            },
            "title": "获取当前用户信息",
          },
          Object {
            "active": true,
            "description": "",
            "methods": Array [
              "GET",
            ],
            "name": "UserInfo",
            "path": "/api/user/:id",
            "request": Object {
              "headers": Object {},
            },
            "response": Object {
              "headers": Object {
                "Authorize": "<token>",
                "Content-Type": "application/json; UTF-8",
              },
              "model": "CurrentUserInfoResponseVo",
              "schemaPath": "<PROJECT_DIR>/test/cases/schemas/user-info/current-user-info-response-vo.json",
            },
            "title": "获取指定用户信息",
          },
        ],
        "methods": Array [
          "GET",
        ],
        "name": "info",
        "namePath": "user-info",
        "prefixPath": "/api/user",
        "request": Object {
          "headers": Object {},
          "modelNamePrefix": "",
          "modelNameSuffix": "",
        },
        "response": Object {
          "headers": Object {
            "Authorize": "<token>",
            "Content-Type": "application/json; UTF-8",
          },
          "modelNamePrefix": "",
          "modelNameSuffix": "",
        },
        "subGroups": Array [],
        "title": "info",
      },
    ],
    "title": "user",
  },
]
`;

exports[`api-parser user-blog: api items 1`] = `
Array [
  Object {
    "active": true,
    "description": "basic api",
    "items": Array [
      Object {
        "active": true,
        "description": "",
        "methods": Array [
          "GET",
        ],
        "name": "query",
        "path": "/api/user/me",
        "request": Object {
          "headers": Object {},
        },
        "response": Object {
          "headers": Object {},
          "model": "QueryCurrentUserResponseVo",
          "schemaPath": "<PROJECT_DIR>/user/query-current-user-response-vo.json",
        },
        "title": "get current user information",
      },
      Object {
        "active": true,
        "description": "",
        "methods": Array [
          "POST",
        ],
        "name": "update",
        "path": "/api/user/me",
        "request": Object {
          "headers": Object {},
          "model": "UpdateCurrentUserRequestVo",
          "schemaPath": "<PROJECT_DIR>/user/update-current-user-request-vo.json",
        },
        "response": Object {
          "headers": Object {},
          "model": "UpdateCurrentUserResponseVo",
          "schemaPath": "<PROJECT_DIR>/user/update-current-user-response-vo.json",
        },
        "title": "update current user information",
      },
      Object {
        "active": true,
        "description": "",
        "methods": Array [
          "POST",
        ],
        "name": "login",
        "path": "/api/user/login",
        "request": Object {
          "headers": Object {},
        },
        "response": Object {
          "headers": Object {},
          "model": "EmptyVo",
          "schemaPath": "<PROJECT_DIR>/user/empty-vo.json",
        },
        "title": "login",
      },
    ],
    "methods": Array [
      "GET",
    ],
    "name": "user",
    "namePath": "user",
    "prefixPath": "/api/user",
    "request": Object {
      "headers": Object {},
      "modelNamePrefix": "",
      "modelNameSuffix": "",
    },
    "response": Object {
      "headers": Object {},
      "modelNamePrefix": "",
      "modelNameSuffix": "",
    },
    "subGroups": Array [],
    "title": "user",
  },
  Object {
    "active": true,
    "description": "the user's blog",
    "items": Array [
      Object {
        "active": true,
        "description": "",
        "methods": Array [
          "GET",
        ],
        "name": "query-articles",
        "path": "/api/blog/articles",
        "request": Object {
          "headers": Object {},
        },
        "response": Object {
          "headers": Object {},
          "model": "QueryArticlesVoPaginationResponseVo",
          "schemaPath": "<PROJECT_DIR>/blog/query-articles-vo-pagination-response-vo.json",
        },
        "title": "query articles under the blog",
      },
      Object {
        "active": true,
        "description": "",
        "methods": Array [
          "POST",
        ],
        "name": "create-article",
        "path": "/api/blog/articles",
        "request": Object {
          "headers": Object {},
        },
        "response": Object {
          "headers": Object {},
          "model": "BlogCreateArticleResponseVoPaginationResponseVo",
          "schemaPath": "<PROJECT_DIR>/blog/blog-create-article-response-vo-pagination-response-vo.json",
        },
        "title": "create an article",
      },
    ],
    "methods": Array [
      "GET",
    ],
    "name": "blog",
    "namePath": "blog",
    "prefixPath": "/api/blog",
    "request": Object {
      "headers": Object {},
      "modelNamePrefix": "",
      "modelNameSuffix": "PaginationResponseVo",
    },
    "response": Object {
      "headers": Object {},
      "modelNamePrefix": "",
      "modelNameSuffix": "PaginationResponseVo",
    },
    "subGroups": Array [
      Object {
        "active": true,
        "description": "blog articles",
        "items": Array [
          Object {
            "active": true,
            "description": "",
            "methods": Array [
              "GET",
            ],
            "name": "query",
            "path": "/api/blog/article/:articleId",
            "request": Object {
              "headers": Object {},
            },
            "response": Object {
              "headers": Object {},
              "model": "ArticleQueryVoResponseVo",
              "schemaPath": "<PROJECT_DIR>/blog-article/article-query-vo-response-vo.json",
            },
            "title": "get article with specified \`articleId\`",
          },
          Object {
            "active": true,
            "description": "",
            "methods": Array [
              "POST",
            ],
            "name": "update",
            "path": "/api/blog/article/:articleId",
            "request": Object {
              "headers": Object {},
            },
            "response": Object {
              "headers": Object {},
              "model": "ArticleUpdateVoResponseVo",
              "schemaPath": "<PROJECT_DIR>/blog-article/article-update-vo-response-vo.json",
            },
            "title": "update article with specified \`articleId\`",
          },
          Object {
            "active": true,
            "description": "",
            "methods": Array [
              "DELETE",
            ],
            "name": "delete",
            "path": "/api/blog/article/:articleId",
            "request": Object {
              "headers": Object {},
            },
            "response": Object {
              "headers": Object {},
              "model": "ArticleDeleteVoResponseVo",
              "schemaPath": "<PROJECT_DIR>/blog-article/article-delete-vo-response-vo.json",
            },
            "title": "delete an article with specified \`articleId\`",
          },
        ],
        "methods": Array [
          "GET",
        ],
        "name": "article",
        "namePath": "blog-article",
        "prefixPath": "/api/blog/article/:articleId",
        "request": Object {
          "headers": Object {},
          "modelNamePrefix": "",
          "modelNameSuffix": "ResponseVo",
        },
        "response": Object {
          "headers": Object {},
          "modelNamePrefix": "",
          "modelNameSuffix": "ResponseVo",
        },
        "subGroups": Array [],
        "title": "article",
      },
    ],
    "title": "blog",
  },
]
`;
